# exponentiator

./: CMakeLists.txt  Vagrantfile  bootstrap.sh  exponentiator.cpp  exponentiator.h  exponentiator_tests.cpp  main.cpp  readme.md  reverse.cpp  reverse.h  reverse_tests.cpp
cmake/: gtest.cmake
